--- a/package.json
+++ b/package.json
@@ -1,30 +1,28 @@
 {
-  "name": "professional-portfolio",
+  "name": "gummertech-portfolio",
   "private": true,
   "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "framer-motion": "^11.0.8",
-    "lucide-react": "^0.344.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.2",
-    "flowbite": "^2.3.0",
-    "flowbite-react": "^0.7.2"
+    "react-router-dom": "^6.22.0",
+    "framer-motion": "^11.0.3",
+    "lucide-react": "^0.331.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.56",
+    "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
-    "vite": "^5.1.4"
+    "typescript": "^5.3.3",
+    "vite": "^5.1.0"
   }
 }
